# elliptic-curve-lab

./: .gitignore  AGENTS.md  Cargo.toml  README.md  clippy.toml  general-weierstrass-plan.md  liblib.rlib  repomix-output.md  rustfmt.toml  twisted-edwards-plan.md
.omx/plans/: quadratic-class-group-compose.md
docs/: ambient-short-weierstrass-big-prime-field-plan.md  crypto-bigint-montgomery-field-migration-plan.md  frobenius-torsion-and-orbits.md
docs/algorithm-diagrams/: README.md  abel-jacobi-inverse-uniformization.md  analytic-torsion-vs-division-polynomial.md  complete-elliptic-integral-k-via-agm.md  complex-agm.md  division-polynomial-torsion-pipeline.md  extension-field-inversion.md  fundamental-domain-reduction.md  invariant-recovery-validation.md  isogeny-composition.md  isogeny-graph-scaffolding.md  lagrange-interpolation.md  legendre-reduction-from-weierstrass-roots.md  period-basis-and-canonical-tau-recovery.md  polynomial-field-inversion.md  prime-field-square-root.md  torus-n-torsion-enumeration.md  truncated-elliptic-function-evaluator.md  weierstrass-cubic-root-recovery.md
docs/algorithm-diagrams/analytic/: analytic-torsion-vs-division-polynomial.md  fundamental-domain-reduction.md  torus-n-torsion-enumeration.md  truncated-elliptic-function-evaluator.md
docs/algorithm-diagrams/fields/: extension-field-inversion.md  polynomial-field-inversion.md  prime-field-square-root.md
docs/algorithm-diagrams/inverse_uniformization/: abel-jacobi-inverse-uniformization.md
docs/algorithm-diagrams/isogenies/: isogeny-composition.md  isogeny-graph-scaffolding.md
examples/: big_prime_field.rs  cm_cornacchia.rs  complex_torsion.md  complex_torsion.rs  complex_torus.rs  crater_walk_labeled_by_class.rs  curve_order.rs  cyclic_prime_roots.rs  division_polynomials.rs  dual_isogeny.rs  frobenius.rs  frobenius_verschiebung.rs  fundamental_domain.rs  general_weierstrass.rs  group_order_algorithms.rs  group_structure.rs  isogeny_graph.rs  isomorphism.rs  legendre-reduction.rs  montgomery.rs  pairing_style_fp12_tower.rs  period_recovery.rs  point_roundtrip.rs  projective_general_weierstrass.rs  projective_short_weierstrass.rs  quadratic_class_group_composition.rs  rational_torsion.rs  root_recovery.rs  schoof_large_prime.rs  twisted_edwards.rs  velu_isogeny.rs  weierstrass_p.rs
proptest-regressions/polynomials/: interpolation.txt
src/: lib.rs  proptest_support.rs
src/algorithms/: Cargo.toml  euclidean.rs  fft.rs  mod.rs  msm.rs
src/elliptic_curves/: AGENTS.md  Cargo.toml  affine.rs  error.rs  invariants.rs  mod.rs  order_from_multiple.rs  projective.rs  short_weierstrass.rs  torsion.rs  traits.rs
src/fields/: AGENTS.md  Cargo.toml  binary_prime_field.rs  cbrt_field.rs  characteristic.rs  complex_approx.rs  crypto_bigint_spike.rs  error.rs  errors.rs  extension_field.rs  finite_field.rs  finite_field_descriptor.rs  mod.rs  montgomery_prime_field.rs  polynomial_field.rs  prime_field.rs  pth_root_extraction.rs  quadratic_character.rs  rationals.rs  sqrt_field.rs  traits.rs  utils.rs
src/isogenies/: AGENTS.md  Cargo.toml  comparison.rs  composition.rs  dual_report.rs  equality.rs  error.rs  isomorphism_isogeny.rs  kernel.rs  mod.rs  scalar_multiplication.rs  traits.rs
src/numerics/: AGENTS.md  bernoulli.rs  chinese_remainder.rs  comparison.rs  complex_algebra.rs  complex_path.rs  euclidean_division.rs  gcd.rs  integer_arithmetic.rs  linear_recurrence.rs  mod.rs  number_theory.rs  prime_powers.rs  quadratic_radicands.rs  rational_arithmetic.rs  sigma.rs  simpson.rs  tolerance.rs
src/polynomials/: AGENTS.md  Cargo.toml  dense.rs  error.rs  evaluation.rs  integer.rs  interpolation.rs  mod.rs  multivariate.rs  rational_normalization.rs  sparse.rs  traits.rs
src/proptest_support/: combinators.rs  config.rs  mod.rs  tests.rs
src/visualization/: AGENTS.md  Cargo.toml  mod.rs  shared.rs  traits.rs
(+1030 files in other folders)
