[package]
name = "elliptic-algorithms-lab"
version = "0.1.0"
edition = "2024"

[dependencies]
# Approximate complex arithmetic support for numerical field experiments.
num-complex = "0.4.6"
# Arbitrary-precision rationals for exact algebraic experiments over Q.
num-bigint = "0.4.6"
# Prime-related integer factorization helpers used by shared number-theoretic predicates.
num-prime = "0.5.0"
num-rational = "0.4.2"
num-traits = "0.2.19"
proptest = { version = "1.6.0", optional = true }

[features]
default = []
test-support = ["dep:proptest"]

[dev-dependencies]
# Property-based tests for generic numerical experiments over sampled `τ`.
proptest = "1.6.0"
